crates/nash-driver/tests/solve/snapshots/solve__inference__annotated_value_rejects_a_hidden_trait_variable.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\ntrait Round 'a where\n    create : () -> 'a\n    discard : 'a -> ()\nvalue : ()\nvalue = discard (create ())\n"
info: diagnostic
---
nash::type::ambiguous_type

  × Cannot determine type `'a` in `value`.
   ╭─[Main.nash:6:1]
 5 │ value : ()
 6 │ value = discard (create ())
   · ─────
   ╰────
  help: Required constraints: Round 'a

        Add a type annotation that determines this variable.
