crates/nash-driver/tests/solve/snapshots/solve__inference__apply_function.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (apply)\n\napply f x = f x\n"
---
apply : forall a b. (a -> b) -> a -> b
