crates/nash-driver/tests/solve/snapshots/solve__inference__big_builtin_types_in_scope.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (..)\nf : Builtin.List Builtin.Int -> List Int\nf x = x\n"
---
f : List Int -> List Int
